@@ -12,6 +12,8 @@ reliably since we moved to MSVC7.1
 B TnFXSQLDB_sqlite3 was adding one to the month of any dates read in
 B FXFont wasn't degrading gracefully to alternative fonts if a font wasn't
 available
+B Due to changes in newer GCC's, fxassemblerops was not compiling i386
+assembler implementations
 
 * Removed many unnecessary fetches of per-thread data (slow on POSIX) in
 FXException
